Add transition and opacity to game.css, update turn indicator in gameUI.js, and update turn in game.js

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -124,6 +124,8 @@ div#content {
 	margin-bottom: 30px; /* Add some space below the header */
 	text-shadow: 4px 3px 0px #65715973;
 	margin: 0;
+	transition: opacity 0.5s ease-in-out;
+	opacity: 1; /* Start fully visible */
 }
 
 .board {
