--- a/src/css/game.css
+++ b/src/css/game.css
@@ -128,6 +128,31 @@ div#content {
 	opacity: 1; /* Start fully visible */
 }
 
+.rotate-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.rotate-button {
+	background-color: #506052;
+	color: #c1c1c1d6;
+	border: 2px solid #929392;
+	padding: 10px 20px;
+	border-radius: 5px;
+	font-weight: bold;
+	cursor: pointer;
+	transition:
+		transform 0.3s ease,
+		background-color 0.3s ease;
+}
+
+.rotate-button:hover {
+	background-color: #2c7235; /* Background color on hover */
+	color: #ffffff87; /* Text color on hover */
+}
+
 .board {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -136,6 +161,10 @@ div#content {
 	justify-items: center;
 	justify-content: center;
 	align-content: center;
+}
+
+.cell.highlight {
+	background-color: lightblue;
 }
 
 .board h2 {
