Add neighbor cell validation in gameBoard.js and update ship cell color in game.css

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -177,13 +177,8 @@ div#content {
 	cursor: not-allowed; /* Blocked cursor */
 }
 
-.cell-with-ship {
-	background-color: #4caf50; /* Example color, adjust as needed */
-	border: 1px solid #ffffff87; /* Example border, adjust as needed */
-}
-
 div.board-grid .cell.cell-with-ship {
-	border: 3px ridge #a42514; /* Example border, adjust as needed */
+	background-color: #00ff1e87;
 }
 
 .board h2 {
@@ -225,17 +220,14 @@ div.board-grid .cell {
 }
 
 .ship {
-	background-color: aqua;
+	background-color: #1e90ff;
 }
 
 .miss {
 	background-color: #ff000087;
 }
 
-.hit {
+div.cell.hit {
 	background-color: #00ff1e87;
-}
-
-.sunk {
-	background-color: #ff00ee87;
+	border: 1px solid #00ff1e87;
 }
