--- a/src/css/game.css
+++ b/src/css/game.css
@@ -77,7 +77,7 @@ div#content {
 .header h1 {
 	text-align: center; /* Center the header text */
 	font-family: "Arial", sans-serif; /* Use a modern, clean font */
-	font-size: 48px; /* Set a large font size for impact */
+	font-size: 39px; /* Set a large font size for impact */
 	color: #ffffff87; /* White color for the text for better contrast */
 	background-color: #19211a; /* Navy blue background */
 	padding: 20px; /* Add some padding around the text */
@@ -93,7 +93,7 @@ div#content {
 }
 
 .icon {
-	width: 6rem;
+	width: 4rem;
 	height: auto;
 }
 
@@ -201,7 +201,7 @@ div.board-grid .cell.cell-with-ship {
 
 div.board-grid {
 	display: grid;
-	grid-template: repeat(10, 2.5vw) / repeat(10, 2.5vw);
+	grid-template: repeat(10, 2.3vw) / repeat(10, 2.3vw);
 	text-align: center;
 	gap: 2px;
 	align-items: center;
@@ -262,4 +262,74 @@ div.cell.ship.hit {
 .popup-content p {
 	font-size: 1rem;
 	font-weight: 900;
+}
+
+/* --------------------------------------- Footer ------------------------------------------------------- */
+
+footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+	width: 100%;
+	height: 2.5rem;
+	padding: 1rem 0;
+}
+
+footer a {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+	text-decoration: none;
+	font-size: 1.3rem;
+	font-weight: 100;
+	color: #969292;
+	font-family:
+		jedi solid,
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		"Segoe UI",
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		"Open Sans",
+		"Helvetica Neue",
+		sans-serif;
+}
+
+footer p {
+	margin: 0.5rem 0;
+}
+
+footer a:hover,
+footer a:active {
+	color: #fff;
+}
+
+footer a:hover img,
+footer a:active img {
+	filter: brightness(99);
+}
+
+.at-symbol {
+	font-weight: 900;
+	font-family:
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		"Segoe UI",
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		"Open Sans",
+		"Helvetica Neue",
+		sans-serif;
+}
+
+footer img {
+	width: 2rem;
+	height: auto;
 }
