--- a/src/css/game.css
+++ b/src/css/game.css
@@ -46,7 +46,7 @@ body {
 div#content {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: space-evenly;
 	align-items: stretch;
 	height: 100vh;
 }
@@ -274,6 +274,7 @@ footer {
 	width: 100%;
 	height: 2.5rem;
 	padding: 1rem 0;
+	padding-bottom: 0.5rem;
 }
 
 footer a {
